src/analizador/Gramatica.java
/* Generated By:JavaCC: Do not edit this line. Gramatica.java */
/** Analizador de expresiones aritmeticas sencillas. */
package Analizador;
public class Gramatica implements GramaticaConstants {

/** Fin Lexico */

/**Inicio sintactico*/
  final public void Inicio() throws ParseException {
    Import();
    Clases();
    jj_consume_token(0);
  }

  final public void Vacio() throws ParseException {

  }

  final public void Import() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IMPORT:
      jj_consume_token(IMPORT);
      Import1();
      break;
    default:
      jj_la1[0] = jj_gen;
      Vacio();
    }
  }

  final public void Import1() throws ParseException {
    jj_consume_token(LIBR);
    jj_consume_token(PYC);
    Import2();
  }

  final public void Import2() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IMPORT:
      jj_consume_token(IMPORT);
      Import1();
      break;
    default:
      jj_la1[1] = jj_gen;
      Vacio();
    }
  }

  final public void Tipo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
      break;
    case CHAR:
      jj_consume_token(CHAR);
      break;
    case STRING:
      jj_consume_token(STRING);
      break;
    case BOOLEAN:
      jj_consume_token(BOOLEAN);
      break;
    case FLOAT:
      jj_consume_token(FLOAT);
      break;
    case DOUBLE:
      jj_consume_token(DOUBLE);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void TipoEncapsular() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PUBLIC:
      jj_consume_token(PUBLIC);
      break;
    case PRIVATE:
      jj_consume_token(PRIVATE);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Clases() throws ParseException {
    TipoEncapsular();
    jj_consume_token(CLASS);
    jj_consume_token(CLASES);
    ClasesA();
  }

  final public void ClasesA() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LLAVA:
      jj_consume_token(LLAVA);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
      case PRIVATE:
        TipoEncapsular();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CLASES:
          Constructor();
          break;
        case CHAR:
        case STRING:
        case INT:
        case FLOAT:
        case BOOLEAN:
        case VOID:
        case DOUBLE:
          Cuerpo();
          break;
        default:
          jj_la1[4] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[5] = jj_gen;
        Vacio();
      }
      jj_consume_token(LLAVC);
      break;
    case DERIVATE:
      jj_consume_token(DERIVATE);
      jj_consume_token(CLASES);
      jj_consume_token(LLAVA);
      Constructor_hijo();
      Cuerpo();
      jj_consume_token(LLAVC);
      break;
    default:
      jj_la1[6] = jj_gen;
      Vacio();
    }
  }

  final public void Constructor() throws ParseException {
    jj_consume_token(CLASES);
    jj_consume_token(PAREA);
    Argumentos();
    jj_consume_token(PAREC);
    jj_consume_token(LLAVA);
    Sentencia();
    jj_consume_token(LLAVC);
  }

  final public void Constructor_hijo() throws ParseException {
    TipoEncapsular();
    jj_consume_token(CLASES);
    jj_consume_token(PAREA);
    Argumentos();
    jj_consume_token(PAREC);
    jj_consume_token(LLAVA);
    Super();
    Sentencia();
    jj_consume_token(LLAVC);
  }

  final public void Cuerpo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CHAR:
    case STRING:
    case INT:
    case FLOAT:
    case BOOLEAN:
    case DOUBLE:
      Tipo();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
        Variables_clase();
        break;
      case FUNC:
        Metodo();
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      CuerpoA();
      break;
    case VOID:
      jj_consume_token(VOID);
      MetodosA();
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void CuerpoA() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PUBLIC:
    case PRIVATE:
      TipoEncapsular();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CHAR:
      case STRING:
      case INT:
      case FLOAT:
      case BOOLEAN:
      case DOUBLE:
        Tipo();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VAR:
          Variables_clase();
          break;
        case FUNC:
          Metodo();
          break;
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        CuerpoA();
        break;
      case VOID:
        jj_consume_token(VOID);
        MetodosA();
        break;
      default:
        jj_la1[10] = jj_gen;
        Vacio();
      }
      break;
    default:
      jj_la1[11] = jj_gen;
      Vacio();
    }
  }

  final public void MetodosA() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FUNC:
      jj_consume_token(FUNC);
      Metodo_void();
      CuerpoA();
      break;
    case PRINMAIN:
      Principal();
      CuerpoA();
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Principal() throws ParseException {
    jj_consume_token(PRINMAIN);
    jj_consume_token(PAREA);
    jj_consume_token(PAREC);
    jj_consume_token(LLAVA);
    Sentencia();
    jj_consume_token(LLAVC);
  }

  final public void Metodo() throws ParseException {
    jj_consume_token(FUNC);
    jj_consume_token(PAREA);
    Argumentos();
    jj_consume_token(PAREC);
    jj_consume_token(LLAVA);
    Sentencia();
    Retorno();
    jj_consume_token(LLAVC);
  }

  final public void Retorno() throws ParseException {
    jj_consume_token(RETURN);
    Tipo_retorno();
  }

  final public void Tipo_retorno() throws ParseException {
    Valor();
    jj_consume_token(PYC);
  }

  final public void Metodo_void() throws ParseException {
    jj_consume_token(PAREA);
    Argumentos();
    jj_consume_token(PAREC);
    jj_consume_token(LLAVA);
    Sentencia();
    jj_consume_token(LLAVC);
  }

  final public void Argumentos() throws ParseException {
    Tipo();
    Declaracion();
    ArgumentosA();
  }

  final public void ArgumentosA() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COM:
      jj_consume_token(COM);
      Argumentos();
      break;
    default:
      jj_la1[13] = jj_gen;
      Vacio();
    }
  }

  final public void Variables_clase() throws ParseException {
    Declaracion();
    jj_consume_token(PYC);
    Variables_clase();
  }

  final public void Sentencia() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FOR:
      jj_consume_token(FOR);
      Sentencia_ciclofor();
      Sentencia();
      break;
    case IF:
      jj_consume_token(IF);
      Sentencia_condicion();
      Sentencia();
      break;
    case CHAR:
    case STRING:
    case INT:
    case FLOAT:
    case BOOLEAN:
    case DOUBLE:
      Tipo();
      Declaracion();
      jj_consume_token(PYC);
      Sentencia();
      break;
    case VAR:
      jj_consume_token(VAR);
      Sentencia_incremental();
      Sentencia();
      break;
    case SWITCH:
      jj_consume_token(SWITCH);
      Sentencia_switch();
      Sentencia();
      break;
    case TRY:
      jj_consume_token(TRY);
      Sentencia_try();
      Sentencia();
      break;
    case THIS:
      jj_consume_token(THIS);
      Sentencia_this();
      Sentencia();
      break;
    case WHILE:
    case DO:
      Sentencia_ciclowhile();
      Sentencia();
      break;
    case FUNC:
      jj_consume_token(FUNC);
      SentenciaLlamarMetodo();
      Sentencia();
      break;
    default:
      jj_la1[14] = jj_gen;
      Vacio();
    }
  }

  final public void Parametros() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR:
      jj_consume_token(VAR);
      ParametrosA();
      break;
    case PAREA:
    case ENTERO:
    case FLOTANTEDOUBLE:
      Exp();
      break;
    case CADENA:
      jj_consume_token(CADENA);
      ParametrosA();
      break;
    case CARACTER:
      jj_consume_token(CARACTER);
      ParametrosA();
      break;
    default:
      jj_la1[15] = jj_gen;
      Vacio();
    }
  }

  final public void ParametrosA() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COM:
      jj_consume_token(COM);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
        jj_consume_token(VAR);
        ParametrosA();
        break;
      case PAREA:
      case ENTERO:
      case FLOTANTEDOUBLE:
        Exp();
        break;
      case CADENA:
        jj_consume_token(CADENA);
        ParametrosA();
        break;
      case CARACTER:
        jj_consume_token(CARACTER);
        ParametrosA();
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[17] = jj_gen;
      Vacio();
    }
  }

  final public void SentenciaLlamarMetodo() throws ParseException {
    jj_consume_token(PAREA);
    Parametros();
    jj_consume_token(PAREC);
    jj_consume_token(PYC);
  }

  final public void Sentencia_try() throws ParseException {
    jj_consume_token(LLAVA);
    Sentencia();
    jj_consume_token(LLAVC);
    jj_consume_token(CATCH);
    jj_consume_token(PAREA);
    jj_consume_token(EXCEPT);
    jj_consume_token(VAR);
    jj_consume_token(PAREC);
    jj_consume_token(LLAVA);
    Sentencia();
    jj_consume_token(LLAVC);
  }

  final public void Sentencia_ciclofor() throws ParseException {
    jj_consume_token(PAREA);
    Declaracionfor();
    jj_consume_token(PYC);
    Condg();
    jj_consume_token(PYC);
    Sentencia_incremental();
    jj_consume_token(PAREC);
    jj_consume_token(LLAVA);
    Sentencia();
    jj_consume_token(LLAVC);
  }

  final public void Sentencia_ciclowhile() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WHILE:
      jj_consume_token(WHILE);
      jj_consume_token(PAREA);
      Condg();
      jj_consume_token(PAREC);
      jj_consume_token(LLAVA);
      Sentencia();
      jj_consume_token(LLAVC);
      break;
    case DO:
      jj_consume_token(DO);
      jj_consume_token(LLAVA);
      Sentencia();
      jj_consume_token(LLAVC);
      jj_consume_token(WHILE);
      jj_consume_token(PAREA);
      Condg();
      jj_consume_token(PAREC);
      jj_consume_token(PYC);
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Sentencia_condicion() throws ParseException {
    jj_consume_token(PAREA);
    Condg();
    jj_consume_token(PAREC);
    jj_consume_token(LLAVA);
    Sentencia();
    jj_consume_token(LLAVC);
    Si_e();
  }

  final public void Sentencia_incremental() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INCRE:
      jj_consume_token(INCRE);
      jj_consume_token(PYC);
      break;
    case DECRE:
      jj_consume_token(DECRE);
      jj_consume_token(PYC);
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Super() throws ParseException {
    jj_consume_token(SUPER);
    jj_consume_token(PAREA);
    Argumentos();
    jj_consume_token(PAREC);
    jj_consume_token(PYC);
  }

  final public void Sentencia_this() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR:
      jj_consume_token(VAR);
      jj_consume_token(ASIG);
      jj_consume_token(VAR);
      jj_consume_token(PYC);
      Sentencia_this();
      break;
    default:
      jj_la1[20] = jj_gen;
      Vacio();
    }
  }

  final public void Sentencia_switch() throws ParseException {
    jj_consume_token(SWITCH);
    jj_consume_token(VAR);
    jj_consume_token(LLAVA);
    Case();
    jj_consume_token(DEF);
    Sentencia();
    jj_consume_token(BREAK);
    jj_consume_token(PYC);
    jj_consume_token(LLAVC);
  }

  final public void Case() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CASE:
      jj_consume_token(CASE);
      Caso();
      jj_consume_token(DOSP);
      Sentencia();
      jj_consume_token(BREAK);
      jj_consume_token(PYC);
      Case();
      break;
    default:
      jj_la1[21] = jj_gen;
      Vacio();
    }
  }

  final public void Caso() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PAREA:
    case ENTERO:
    case VAR:
      X();
      break;
    case CADENA:
      jj_consume_token(CADENA);
      break;
    case CARACTER:
      jj_consume_token(CARACTER);
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Si_e() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      Si_EA();
      break;
    default:
      jj_la1[23] = jj_gen;
      Vacio();
    }
  }

  final public void Si_EA() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LLAVA:
      jj_consume_token(LLAVA);
      Sentencia();
      jj_consume_token(LLAVC);
      break;
    case PAREA:
      Sentencia_condicion();
      break;
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Condg() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PAREA:
      jj_consume_token(PAREA);
      Condg();
      jj_consume_token(PAREC);
      break;
    case TRUE:
    case FALSE:
    case ENTERO:
    case FLOTANTEDOUBLE:
    case VAR:
      Cond();
      break;
    case NOT:
      jj_consume_token(NOT);
      Condg();
      break;
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    CondgA();
  }

  final public void CondgA() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AND:
      jj_consume_token(AND);
      Condg();
      CondgA();
      break;
    case OR:
      jj_consume_token(OR);
      Condg();
      CondgA();
      break;
    case NOT:
      jj_consume_token(NOT);
      Condg();
      CondgA();
      break;
    default:
      jj_la1[26] = jj_gen;
      Vacio();
    }
  }

